use kotlin for main and simple feature